--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,155 +1,171 @@
 /*=====Google Font=====*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scroll-behavior: smooth;
+  scrollbar-color: #e3e3e3 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: lightgray;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #e3e3e3;
+  border-radius: 3px;
+  border: 1px groove #ffffff;
+}
 
 /*=====variables css=====*/
 
-:root{
+:root {
   --header-height: 3.5rem;
 
   /*=====Color=====*/
   --hue: 512;
-  --first-color:  ;
-  --first-color-alt:  ;
-  --first-color-light:  ;
-  --title-color:  ;
+  --first-color: ;
+  --first-color-alt: ;
+  --first-color-light: ;
+  --title-color: ;
   --text-color: ;
   --description-color: hsl(200, 15%, 43%);
   --body-color: ;
   --container-color: ;
 
-   /*=====Font=====*/
-   --body-font: 'Poppins', sans-serif;
-   --big-font-size: 2rem;
-   --h1-font-size: 1.5rem;
-   --h2-font-size: 1.25rem;
-   --h3-font-size: 1rem;
-   --normal-font-size: .938rem;
-   --small-font-size: .813rem;
-   --smaller-font-size: .75rem;
-   --font-medium: 500;
-   --font-semi-bold: 600;
+  /*=====Font=====*/
+  --body-font: "Poppins", sans-serif;
+  --big-font-size: 2rem;
+  --h1-font-size: 1.5rem;
+  --h2-font-size: 1.25rem;
+  --h3-font-size: 1rem;
+  --normal-font-size: 0.938rem;
+  --small-font-size: 0.813rem;
+  --smaller-font-size: 0.75rem;
+  --font-medium: 500;
+  --font-semi-bold: 600;
 
-   /*=====Margin bottom=====*/
-   --mb-0-5: .5rem;
-   --mb-0-75: .75rem;
-   --mb-1: 1rem;
-   --mb-1-5: 1.5rem;
-   --mb-2: 2rem;
-   --mb-2-5: 2.5rem;
+  /*=====Margin bottom=====*/
+  --mb-0-5: 0.5rem;
+  --mb-0-75: 0.75rem;
+  --mb-1: 1rem;
+  --mb-1-5: 1.5rem;
+  --mb-2: 2rem;
+  --mb-2-5: 2.5rem;
 
-   /*===== Z index=====*/
-   --z-tooltip: 10;
-   --z-fixed: 100;
-
+  /*===== Z index=====*/
+  --z-tooltip: 10;
+  --z-fixed: 100;
 }
 
 /*===== Responsive typography=====*/
 
 @media screen and (min-width: 968px) {
   :root {
-   --big-font-size: 3.5rem;
-   --h1-font-size: 2.25rem;
-   --h2-font-size: 1.5rem;
-   --h3-font-size: 1.25rem;
-   --normal-font-size: 1rem;
-   --small-font-size: .875rem;
-   --smaller-font-size: .813rem;
+    --big-font-size: 3.5rem;
+    --h1-font-size: 2.25rem;
+    --h2-font-size: 1.5rem;
+    --h3-font-size: 1.25rem;
+    --normal-font-size: 1rem;
+    --small-font-size: 0.875rem;
+    --smaller-font-size: 0.813rem;
   }
 }
 
-
 /*===== Base =====*/
 
-*{
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
 body,
 button,
 input,
-textarea{
+textarea {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
 }
 
-body{
+body {
   margin: var(--header-height) 0 0 0;
   background-color: var(--body-color);
   color: var(--text-color);
 }
 
-button{
+button {
   cursor: pointer;
   border: none;
   outline: none;
 }
 
-h1, 
-h2, 
-h3{
+h1,
+h2,
+h3 {
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
 }
 
-ul{
+ul {
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-img{
+img {
   max-width: 100%;
   height: auto;
 }
 
-
-
-
 /*===== Reusable css class =====*/
 
-.section{
+.section {
   padding: 5.5rem 0 1rem;
 }
 
 .section__title,
-.section__title-center{
+.section__title-center {
   font-size: var(--h2-font-size);
   margin-bottom: var(--mb-2);
   line-height: 140%;
 }
 
-
-.section__title-center{
+.section__title-center {
   text-align: center;
 }
 
-.container{
+.container {
   margin-left: var(--mb-1-5);
   margin-right: var(--mb-1-5);
 }
 
-.grid{
+.grid {
   display: grid;
 }
 
-.main{
+.main {
   overflow: hidden;
 }
 
-
 /*===== Header =====*/
 
-.header{
+.header {
   width: 100%;
-  background-color: var(--body-color);
+  background-color: white;
   position: fixed;
   top: 0;
   left: 0;
@@ -158,7 +174,7 @@ img{
 
 /*===== NAV =====*/
 
-.nav{
+.nav {
   height: var(--header-height);
   display: flex;
   justify-content: space-between;
@@ -167,53 +183,53 @@ img{
 
 .nav__logo,
 .nav__toggle,
-.nav__close{
+.nav__close {
   color: var(--title-color);
 }
 
-.nav__logo{
+.nav__logo {
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: -1;
   display: inline-flex;
   align-items: center;
-  column-gap: .5rem;
-  transition: .3s;
+  column-gap: 0.5rem;
+  transition: 0.3s;
 }
 
-.nav__logo-icon{
+.nav__logo-icon {
   font-size: 1.15rem;
   color: var(--first-color);
 }
 
-.nav__logo:hover, .nav__item:hover{
+.nav__logo:hover,
+.nav__item:hover {
   color: orangered;
 }
 
-
-.nav__toggle{
+.nav__toggle {
   display: inline-flex;
   font-size: 1.25rem;
   cursor: pointer;
 }
 
 @media screen and (max-width: 767px) {
-  .nav__menu{
+  .nav__menu {
     position: fixed;
     background-color: #fff;
     width: 80%;
     height: 100%;
     top: 0;
     right: -100%;
-    box-shadow: -2px 0 4px hsla(var(--hue), 24%, 15%, .1);
+    box-shadow: -2px 0 4px hsla(var(--hue), 24%, 15%, 0.1);
     padding: 4rem 0 0 3rem;
     border-radius: 1rem 0 0 1rem;
-    transition: .3s;
+    transition: 0.3s;
     z-index: var(--z-fixed);
   }
 }
 
-.nav__close{
+.nav__close {
   font-size: 1.5rem;
   position: absolute;
   top: 1rem;
@@ -221,63 +237,60 @@ img{
   cursor: pointer;
 }
 
-.nav__list{
-  display:  flex;
+.nav__list {
+  display: flex;
   flex-direction: column;
   row-gap: 1.5rem;
 }
 
-.nav__link{
+.nav__link {
   color: var(--title-color);
   font-weight: var(--font-medium);
-  transition: .3s;
+  transition: 0.3s;
 }
 
-.nav__link{
+.nav__link {
   color: var(--first-color);
 }
 
-
-
 /*===== show menu =====*/
 
-.show-menu{
+.show-menu {
   right: 0;
 }
 
 /*===== change header background =====*/
 
-.scroll-header{
-  box-shadow: 0 1px 4px hsla(var(--hue), 4%, 15%, .1);
+.scroll-header {
+  box-shadow: 0 1px 4px hsla(var(--hue), 4%, 15%, 0.1);
   background-color: #fff;
 }
 
-
 /*===== Home =====*/
 
-.home{
+.home {
   padding: 3rem 0 2rem;
 }
 
-.home__container{
+.home__container {
   position: relative;
   display: grid;
   row-gap: 2rem;
 }
 
-.home__img{
+.home__img {
   width: 100%;
   justify-self: center;
   filter: contrast(130%);
 }
 
-.home__title{
+.home__title {
   font-size: var(--big-font-size);
   line-height: 140%;
   margin-bottom: var(--mb-0-5);
 }
 
-.home__description{
+.home__description {
   margin-bottom: var(--mb-2-5);
   font-size: var(--small-font-size);
   color: var(--description-color);
@@ -285,41 +298,41 @@ img{
 
 /*===== Buttons =====*/
 
-.button{
+.button {
   display: inline-block;
   background-color: orangered;
   color: #fff;
-  padding: .75rem 1rem;
-  border-radius: .5rem;
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
   font-weight: var(--font-medium);
-  transition: .3s;
+  transition: 0.3s;
 }
 
-.button__icon{
-  transition: .3s;
+.button__icon {
+  transition: 0.3s;
 }
 
-.button:hover .button__icon{
-  transform: translateX(.25rem);
+.button:hover .button__icon {
+  transform: translateX(0.25rem);
 }
 
-.button--flex{
+.button--flex {
   display: inline-flex;
   align-items: center;
-  column-gap: .5rem;
+  column-gap: 0.5rem;
 }
 
-.button--link{
+.button--link {
   font-weight: var(--font-medium);
 }
 
-.button--link:hover .button__icon{
-  transform: translateX(.25rem);
+.button--link:hover .button__icon {
+  transform: translateX(0.25rem);
 }
 
 /*===== Services =====*/
 
-.service__title-center{
+.service__title-center {
   text-align: center;
   padding: 4rem 0 0 0;
   font-size: var(--h1-font-size);
@@ -327,13 +340,13 @@ img{
   color: var(--title-color);
 }
 
-.service__container{
+.service__container {
   padding: 4rem 0;
   display: grid;
   gap: 2.5rem 3rem;
 }
 
-.service__card{
+.service__card {
   padding: var(--mb-1-5);
   display: grid;
   margin-bottom: var(--mb-1);
@@ -343,312 +356,303 @@ img{
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
-.service__icon{
+.service__icon {
   color: orangered;
   justify-self: center;
   font-size: var(--mb-2-5);
   padding: var(--mb-1);
 }
 
-.service__title{
+.service__title {
   font-size: var(--h2-font-size);
   font-weight: var(--font-semi-bold);
   color: var(--title-color);
   padding: var(--mb-1);
 }
 
-.service__description{
+.service__description {
   color: var(--description-color);
   text-align: center;
   font-size: var(--small-font-size);
   margin-bottom: var(--mb-0-75);
 }
 
-.service__button{
+.service__button {
   color: gray;
-  font-size:var(--normal-font-size);
+  font-size: var(--normal-font-size);
   padding: var(--mb-0-75);
   background: none;
   margin-bottom: var(--mb-1-5);
 }
 
-.service__button:hover{
+.service__button:hover {
   color: orangered;
 }
 
-
 /*===== About =====*/
 
-.about__container{
+.about__container {
   display: grid;
   row-gap: 2rem;
 }
 
-.about__img{
-  width: 100%;
+.about__img {
+  width: 80%;
   justify-self: center;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
-.about__title{
+.about__title {
   margin-bottom: var(--mb-1);
 }
 
-.about__description{  
+.about__description {
   color: var(--description-color);
   margin-bottom: var(--mb-2);
   font-size: var(--small-font-size);
 }
 
-.about__details{
+.about__details {
   color: var(--description-color);
   display: grid;
   row-gap: 1rem;
   margin-bottom: var(--mb-2-5);
 }
 
-.about__details-description{
+.about__details-description {
   display: inline-flex;
-  column-gap: .5rem;
+  column-gap: 0.5rem;
   font-size: var(--small-font-size);
 }
 
-.about__details-icon{
+.about__details-icon {
   color: orangered;
   font-size: 1rem;
-  margin-top: .15rem;
+  margin-top: 0.15rem;
 }
-
 
 /*===== Products =====*/
 
-.product__description{  
+.product__description {
   color: var(--description-color);
   text-align: start;
   font-size: var(--smaller-font-size);
 }
 
-.product__container{
+.product__container {
   padding: 3rem 0;
   grid-template-columns: repeat(2, 1fr);
   gap: 2.5rem 3rem;
 }
 
-.product__card{
+.product__card {
   display: grid;
   position: relative;
   margin-bottom: var(--mb-1);
   overflow: hidden;
 }
 
-.product__img{
+.product__img {
   position: relative;
   width: 100%;
   justify-self: center;
   margin-bottom: var(--mb-0-75);
   transition: 0.25s all ease-in-out;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
-.product__img:hover{
-  border-radius: .5rem;
+.product__img:hover {
+  border-radius: 0.5rem;
   transform: scale(1.04);
 }
 
 .product__title,
-.product__price{
+.product__price {
   font-size: var(--h3-font-size);
   font-weight: var(--font-semi-bold);
   color: var(--title-color);
 }
 
-.product__price{
+.product__price {
   font-size: var(--small-big-size);
 }
 
-.product__title{
-  margin-bottom: .25rem;
+.product__title {
+  margin-bottom: 0.25rem;
 }
 
-.product__button{
+.product__button {
   position: absolute;
   right: 1%;
   top: 1%;
   background-color: var(--first-color);
   color: #fff;
-  padding: .5rem;
+  padding: 0.5rem;
   font-size: 1.15rem;
 }
 
-.product__button:hover{
+.product__button:hover {
   background-color: orangered;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
-
-
 
 /*===== Footer =====*/
 
-.footer__container{
+.footer__container {
   row-gap: 2rem;
 }
 
-.footer__logo{
+.footer__logo {
   display: inline-flex;
   align-items: center;
   column-gap: 0.5rem;
   color: var(--title-color);
   text-transform: uppercase;
   font-weight: 700;
-  letter-spacing: -.5px;
+  letter-spacing: -0.5px;
   margin-bottom: var(--mb-2-5);
-  transition: .3s;
+  transition: 0.3s;
 }
 
-.footer__logo:hover{
+.footer__logo:hover {
   color: orangered;
 }
 
-.footer__logo-icon{
+.footer__logo-icon {
   font-size: 1.15rem;
   color: var(--first-color);
 }
 
-.footer__title{
+.footer__title {
   font-size: var(--h3-font-size);
   margin-bottom: var(--mb-1-5);
 }
 
-.footer_data{
+.footer_data {
   display: grid;
   row-gap: 1rem;
 }
 
-.footer__information{
+.footer__information {
   font-size: var(--small-font-size);
-  padding: .07rem;
+  padding: 0.07rem;
   color: var(--description-color);
 }
 
-.footer__social{
+.footer__social {
   display: inline-flex;
-  column-gap: .75rem;
+  column-gap: 0.75rem;
   color: gray;
 }
 
-.footer__social-link{
+.footer__social-link {
   font-size: 1rem;
   color: var(--text-color);
-  transition: .3s;
+  transition: 0.3s;
 }
 
-.footer__social-link:hover{
-  transform: translateY(-.25rem);
+.footer__social-link:hover {
+  transform: translateY(-0.25rem);
   color: orangered;
 }
 
-.footer__copy{
+.footer__copy {
   text-align: center;
   font-size: var(--smaller-font-size);
   color: var(--description-color);
   margin: 4rem 0 1rem;
 }
 
-
-
-
-
 /*===== Breakpoints =====*/
 
 /*     Small Device     */
-@media screen and (max-width:320px){
-  .product__container{
+@media screen and (max-width: 320px) {
+  .product__container {
     grid-template-columns: repeat(1, 1fr);
     justify-content: center;
   }
 
-  .service__container{
+  .service__container {
     grid-template-columns: repeat(1, 1fr);
   }
 }
 
-
-@media screen and (min-width: 320px){
-  .container{
+@media screen and (min-width: 320px) {
+  .container {
     margin-left: var(--mb-1);
     margin-right: var(--mb-1);
   }
 
-  .product__container{
+  .product__container {
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
-  } 
+  }
 
-  .footer__container{
+  .footer__container {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 /*     Medium Device     */
-@media screen and (min-width: 576px){
-  .product__container{
+@media screen and (min-width: 576px) {
+  .product__container {
     grid-template-columns: repeat(4, 1fr);
     justify-content: center;
     column-gap: 2rem;
   }
-  .service__container{
+  .service__container {
     grid-template-columns: repeat(2, 1fr);
     column-gap: var(--mb-1);
   }
 
-  .home__title{
+  .home__title {
     font-size: var(--mb-2-5);
   }
 
-  .home__description{
+  .home__description {
     font-size: var(--mb-1);
   }
 }
 
-@media screen and (min-width: 767px){
-  body{
+@media screen and (min-width: 767px) {
+  body {
     margin: 0;
   }
 
-  .nav{
+  .nav {
     height: calc(var(--header-height) + 1.5rem);
   }
 
   .nav__toggle,
-  .nav__close{
+  .nav__close {
     display: none;
   }
 
-  .nav__list{
+  .nav__list {
     flex-direction: row;
     column-gap: 3rem;
   }
 
-  .nav__menu{
+  .nav__menu {
     margin-left: auto;
   }
 
-  .home__container{
+  .home__container {
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .home{
+  .home {
     padding: 5rem 0 5rem 0;
   }
 
-  .home__img{
+  .home__img {
     border-radius: 10px;
     height: 700px;
     width: 100%;
     filter: brightness(40%);
   }
 
-  .home__data{
+  .home__data {
     position: absolute;
     color: rgb(0, 0, 0);
     padding-top: var(--mb-2-5);
@@ -657,54 +661,54 @@ img{
     color: #fff;
   }
 
-  .home__title{
+  .home__title {
     font-size: 4rem;
   }
 
-  .home__description{
+  .home__description {
     color: #fff;
   }
 
-  .about__container{
+  .about__container {
     grid-template-columns: repeat(2, 1fr);
     margin-bottom: var(--mb-2-5);
   }
 
-  .service__container{
-    grid-template-columns: repeat(3, 1fr);    
+  .service__container {
+    grid-template-columns: repeat(3, 1fr);
   }
 
-  .about__title{
+  .about__title {
     font-size: var(--h1-font-size);
   }
 
-  .about__data{
+  .about__data {
     padding: 7rem 0 0 3rem;
   }
 
-  .about__details{
+  .about__details {
     font-size: var(--big-font-size);
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .about__details-description{
+  .about__details-description {
     margin: var(--mb-1);
-    column-gap: .7rem;
+    column-gap: 0.7rem;
   }
 
-  .about__details-icon{
+  .about__details-icon {
     font-size: 1.2rem;
   }
 
-  .section__title-center{
+  .section__title-center {
     font-size: var(--h1-font-size);
   }
 
-  .footer__container{
-    grid-template-columns: 1fr .5fr .5fr .5fr;
+  .footer__container {
+    grid-template-columns: 1fr 0.5fr 0.5fr 0.5fr;
   }
 
-  .footer__copy{
+  .footer__copy {
     margin: 5rem 0 1rem;
   }
 }
