--- a/styles.css
+++ b/styles.css
@@ -591,6 +591,26 @@ img {
   .footer__container {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  #sell {
+    width: 24rem;
+  }
+
+  .addProperty {
+    width: 24rem;
+  }
+
+  table {
+    margin-top: 20px;
+    margin-left: 1rem;
+    display: flex;
+    align-items: le;
+    justify-content: center;
+    background-color: lightgoldenrodyellow;
+    padding: 40px;
+    border-radius: 10px;
+    width: 75%;
+  }
 }
 
 /*     Medium Device     */
@@ -713,40 +733,56 @@ img {
   }
 }
 
-
-
-input{
-  padding: .5rem;
+input {
+  padding: 0.5rem;
   /* height: 40px; */
   border: none;
-  border-radius: .3rem;
+  border-radius: 0.3rem;
+  width: 20rem;
 }
 
 table {
   margin-top: 20px;
-  margin-left: 200px;
+  margin-left: auto;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: lightgoldenrodyellow;
   padding: 40px;
   border-radius: 10px;
-  width: 75%;
-} 
+  width: 100%;
+}
 
 label {
   font-weight: 600;
 }
 
-tr, td {
+tr,
+td {
   padding: 10px;
   border-collapse: collapse;
 }
 
-#btn{
-  margin-left: 300px;
+tr {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#btn {
+  margin: auto;
   padding: 10px 20px;
   border-radius: 10px;
   background-color: black;
   color: white;
+}
+
+.label {
+  display: inline-block;
+  background-color: whitesmoke;
+  border: 1px solid black;
+  padding: 0.3rem;
+  font-weight: normal;
+  border-radius: 0.2rem;
+  cursor: pointer;
 }
